// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Configuration with component 1`] = `
Object {
  "__catalogConfig": true,
  "basePath": "/",
  "pageTree": Array [
    Object {
      "component": [Function],
      "id": 1,
      "imports": Object {},
      "pages": null,
      "path": "/",
      "scripts": Array [],
      "styles": Array [],
      "superTitle": "Catalog",
      "title": "Overview",
    },
    Object {
      "component": [Function],
      "hideFromMenu": true,
      "id": 2,
      "imports": Object {},
      "path": "/*",
      "scripts": Array [],
      "styles": Array [],
      "superTitle": "Catalog",
      "title": "Page Not Found",
    },
  ],
  "pages": Array [
    Object {
      "component": [Function],
      "id": 1,
      "imports": Object {},
      "index": 0,
      "pages": null,
      "path": "/",
      "scripts": Array [],
      "styles": Array [],
      "superTitle": "Catalog",
      "title": "Overview",
    },
    Object {
      "component": [Function],
      "hideFromMenu": true,
      "id": 2,
      "imports": Object {},
      "path": "/*",
      "scripts": Array [],
      "styles": Array [],
      "superTitle": "Catalog",
      "title": "Page Not Found",
    },
  ],
  "publicUrl": "",
  "responsiveSizes": Array [
    Object {
      "height": 640,
      "name": "small",
      "width": 360,
    },
    Object {
      "height": 768,
      "name": "medium",
      "width": 1024,
    },
    Object {
      "height": 900,
      "name": "large",
      "width": 1440,
    },
    Object {
      "height": 1080,
      "name": "xlarge",
      "width": 1920,
    },
  ],
  "specimens": Object {
    "audio": [Function],
    "code": [Function],
    "color": [Function],
    "color-palette": [Function],
    "download": [Function],
    "hint": [Function],
    "html": [Function],
    "image": [Function],
    "raw-code": [Function],
    "react": [Function],
    "table": [Function],
    "type": [Function],
    "video": [Function],
  },
  "theme": Object {
    "background": "#F9F9F9",
    "baseFontSize": 16,
    "bgDark": "#333333",
    "bgLight": "#F2F2F2",
    "brandColor": "#003B5C",
    "checkerboardPatternDark": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAAAAACoWZBhAAAAFklEQVQI12NQBQF2EGAghQkmwXxSmADZJQiZ2ZZ46gAAAABJRU5ErkJggg==",
    "checkerboardPatternLight": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAAAAACoWZBhAAAAF0lEQVQI12P4BAI/QICBFCaYBPNJYQIAkUZftTbC4sIAAAAASUVORK5CYII=",
    "codeColor": "#00263E",
    "codeStyles": Object {
      "function": Object {
        "color": "#FF5555",
      },
      "keyword": Object {
        "color": "#3F7397",
      },
      "punctuation": Object {
        "color": "#535353",
      },
      "script": Object {
        "color": "#3F7397",
      },
      "string": Object {
        "color": "#00263E",
      },
      "tag": Object {
        "color": "#FF5555",
      },
    },
    "fontFamily": "'Roboto', sans-serif",
    "fontHeading": "'Roboto', sans-serif",
    "fontMono": "'Roboto Mono', monospace",
    "lightColor": "#D6D6D6",
    "linkColor": "#FF5555",
    "msRatio": 1.2,
    "navBarBackground": "#F2F2F2",
    "navBarTextColor": "#003B5C",
    "pageHeadingBackground": "#003B5C",
    "pageHeadingHeight": 200,
    "pageHeadingTextColor": "#fff",
    "sidebarColor": "#FFFFFF",
    "sidebarColorHeading": "#003B5C",
    "sidebarColorLine": "#EBEBEB",
    "sidebarColorText": "#003B5C",
    "sidebarColorTextActive": "#FF5555",
    "textColor": "#333333",
  },
  "title": "Catalog",
}
`;

exports[`Configuration with default theme and specimens 1`] = `
Object {
  "__catalogConfig": true,
  "basePath": "/",
  "pageTree": Array [
    Object {
      "id": 1,
      "imports": Object {},
      "pages": null,
      "path": "/",
      "scripts": Array [],
      "src": "overview.md",
      "styles": Array [],
      "superTitle": "Catalog",
      "title": "Overview",
    },
    Object {
      "component": [Function],
      "hideFromMenu": true,
      "id": 2,
      "imports": Object {},
      "path": "/*",
      "scripts": Array [],
      "styles": Array [],
      "superTitle": "Catalog",
      "title": "Page Not Found",
    },
  ],
  "pages": Array [
    Object {
      "id": 1,
      "imports": Object {},
      "index": 0,
      "pages": null,
      "path": "/",
      "scripts": Array [],
      "src": "overview.md",
      "styles": Array [],
      "superTitle": "Catalog",
      "title": "Overview",
    },
    Object {
      "component": [Function],
      "hideFromMenu": true,
      "id": 2,
      "imports": Object {},
      "path": "/*",
      "scripts": Array [],
      "styles": Array [],
      "superTitle": "Catalog",
      "title": "Page Not Found",
    },
  ],
  "publicUrl": "",
  "responsiveSizes": Array [
    Object {
      "height": 640,
      "name": "small",
      "width": 360,
    },
    Object {
      "height": 768,
      "name": "medium",
      "width": 1024,
    },
    Object {
      "height": 900,
      "name": "large",
      "width": 1440,
    },
    Object {
      "height": 1080,
      "name": "xlarge",
      "width": 1920,
    },
  ],
  "specimens": Object {
    "audio": [Function],
    "code": [Function],
    "color": [Function],
    "color-palette": [Function],
    "download": [Function],
    "hint": [Function],
    "html": [Function],
    "image": [Function],
    "raw-code": [Function],
    "react": [Function],
    "table": [Function],
    "type": [Function],
    "video": [Function],
  },
  "theme": Object {
    "background": "#F9F9F9",
    "baseFontSize": 16,
    "bgDark": "#333333",
    "bgLight": "#F2F2F2",
    "brandColor": "#003B5C",
    "checkerboardPatternDark": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAAAAACoWZBhAAAAFklEQVQI12NQBQF2EGAghQkmwXxSmADZJQiZ2ZZ46gAAAABJRU5ErkJggg==",
    "checkerboardPatternLight": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAAAAACoWZBhAAAAF0lEQVQI12P4BAI/QICBFCaYBPNJYQIAkUZftTbC4sIAAAAASUVORK5CYII=",
    "codeColor": "#00263E",
    "codeStyles": Object {
      "function": Object {
        "color": "#FF5555",
      },
      "keyword": Object {
        "color": "#3F7397",
      },
      "punctuation": Object {
        "color": "#535353",
      },
      "script": Object {
        "color": "#3F7397",
      },
      "string": Object {
        "color": "#00263E",
      },
      "tag": Object {
        "color": "#FF5555",
      },
    },
    "fontFamily": "'Roboto', sans-serif",
    "fontHeading": "'Roboto', sans-serif",
    "fontMono": "'Roboto Mono', monospace",
    "lightColor": "#D6D6D6",
    "linkColor": "#FF5555",
    "msRatio": 1.2,
    "navBarBackground": "#F2F2F2",
    "navBarTextColor": "#003B5C",
    "pageHeadingBackground": "#003B5C",
    "pageHeadingHeight": 200,
    "pageHeadingTextColor": "#fff",
    "sidebarColor": "#FFFFFF",
    "sidebarColorHeading": "#003B5C",
    "sidebarColorLine": "#EBEBEB",
    "sidebarColorText": "#003B5C",
    "sidebarColorTextActive": "#FF5555",
    "textColor": "#333333",
  },
  "title": "Catalog",
}
`;

exports[`Configuration with nested pages 1`] = `
Object {
  "__catalogConfig": true,
  "basePath": "/",
  "pageTree": Array [
    Object {
      "id": 1,
      "imports": Object {},
      "pages": Array [
        Object {
          "id": 2,
          "imports": Object {},
          "pages": null,
          "path": "/foo",
          "scripts": Array [],
          "src": "foo.md",
          "styles": Array [],
          "superTitle": "Overview",
          "title": "Foo",
        },
        Object {
          "id": 3,
          "imports": Object {},
          "pages": null,
          "path": "/bar",
          "scripts": Array [],
          "src": "bar.md",
          "styles": Array [],
          "superTitle": "Overview",
          "title": "Bar",
        },
      ],
      "path": null,
      "scripts": Array [],
      "styles": Array [],
      "superTitle": "Catalog",
      "title": "Overview",
    },
    Object {
      "component": [Function],
      "hideFromMenu": true,
      "id": 4,
      "imports": Object {},
      "path": "/*",
      "scripts": Array [],
      "styles": Array [],
      "superTitle": "Catalog",
      "title": "Page Not Found",
    },
  ],
  "pages": Array [
    Object {
      "id": 2,
      "imports": Object {},
      "index": 0,
      "pages": null,
      "path": "/foo",
      "scripts": Array [],
      "src": "foo.md",
      "styles": Array [],
      "superTitle": "Overview",
      "title": "Foo",
    },
    Object {
      "id": 3,
      "imports": Object {},
      "index": 1,
      "pages": null,
      "path": "/bar",
      "scripts": Array [],
      "src": "bar.md",
      "styles": Array [],
      "superTitle": "Overview",
      "title": "Bar",
    },
    Object {
      "component": [Function],
      "hideFromMenu": true,
      "id": 4,
      "imports": Object {},
      "path": "/*",
      "scripts": Array [],
      "styles": Array [],
      "superTitle": "Catalog",
      "title": "Page Not Found",
    },
  ],
  "publicUrl": "",
  "responsiveSizes": Array [
    Object {
      "height": 640,
      "name": "small",
      "width": 360,
    },
    Object {
      "height": 768,
      "name": "medium",
      "width": 1024,
    },
    Object {
      "height": 900,
      "name": "large",
      "width": 1440,
    },
    Object {
      "height": 1080,
      "name": "xlarge",
      "width": 1920,
    },
  ],
  "specimens": Object {
    "audio": [Function],
    "code": [Function],
    "color": [Function],
    "color-palette": [Function],
    "download": [Function],
    "hint": [Function],
    "html": [Function],
    "image": [Function],
    "raw-code": [Function],
    "react": [Function],
    "table": [Function],
    "type": [Function],
    "video": [Function],
  },
  "theme": Object {
    "background": "#F9F9F9",
    "baseFontSize": 16,
    "bgDark": "#333333",
    "bgLight": "#F2F2F2",
    "brandColor": "#003B5C",
    "checkerboardPatternDark": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAAAAACoWZBhAAAAFklEQVQI12NQBQF2EGAghQkmwXxSmADZJQiZ2ZZ46gAAAABJRU5ErkJggg==",
    "checkerboardPatternLight": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAAAAACoWZBhAAAAF0lEQVQI12P4BAI/QICBFCaYBPNJYQIAkUZftTbC4sIAAAAASUVORK5CYII=",
    "codeColor": "#00263E",
    "codeStyles": Object {
      "function": Object {
        "color": "#FF5555",
      },
      "keyword": Object {
        "color": "#3F7397",
      },
      "punctuation": Object {
        "color": "#535353",
      },
      "script": Object {
        "color": "#3F7397",
      },
      "string": Object {
        "color": "#00263E",
      },
      "tag": Object {
        "color": "#FF5555",
      },
    },
    "fontFamily": "'Roboto', sans-serif",
    "fontHeading": "'Roboto', sans-serif",
    "fontMono": "'Roboto Mono', monospace",
    "lightColor": "#D6D6D6",
    "linkColor": "#FF5555",
    "msRatio": 1.2,
    "navBarBackground": "#F2F2F2",
    "navBarTextColor": "#003B5C",
    "pageHeadingBackground": "#003B5C",
    "pageHeadingHeight": 200,
    "pageHeadingTextColor": "#fff",
    "sidebarColor": "#FFFFFF",
    "sidebarColorHeading": "#003B5C",
    "sidebarColorLine": "#EBEBEB",
    "sidebarColorText": "#003B5C",
    "sidebarColorTextActive": "#FF5555",
    "textColor": "#333333",
  },
  "title": "Catalog",
}
`;
